<?xml version="1.0"?>
<package format="2">
  <name>im1r_ros_driver</name>
  <version>0.0.0</version>
  <description>The im1r_ros_driver package</description>
  
  <author>Jielei Han</author>
  <maintainer email="xiaorong.wang@daisch.com">Xiaorong Wang</maintainer>
  <maintainer email="bolong.chang@daisch.com">Bolong Chang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>

